# FlowState

./: .gitignore  FlowState.spec  HumanTyperHUD.ahk  LICENSE  README.md  README.txt  SECURITY.md  engine.py  main.py  pyproject.toml  requirements.txt  requirements_mac.txt  requirements_win.txt  settings.ini  settings.ini.example  settings_gui.py  setup_mac.sh  setup_windows.bat  test_pw.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
assets/: logo.icns
build_scripts/: build_mac.sh  build_win.bat  windows_setup.iss
os_layer/: __init__.py  mac_driver.py  playwright_driver.py  win_driver.py
src/: engine.py  main.py  main_mac.py  main_win.py  settings.ini  settings_gui.py
src/os_layer/: playwright_driver.py  playwright_driver_mac.py  playwright_driver_win.py
