[project]
name = "flowstate-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "configparser>=7.2.0",
    "keyboard>=0.13.5",
    "pillow>=12.2.0",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "pystray>=0.19.5",
]
